{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -39,7 +39,7 @@ collections:
       - Residents’ Committee (RC)/Owen RC.md
       - Residents’ Committee (RC)/Tekka RC.md
       - Neighbourhood Committee GROs/.keep
-      - Neighbourhood Committee GROs/Balmoral NC.md
+      - Neighbourhood Committee GROs/Balmoral RN.md
       - Neighbourhood Committee GROs/Cambridge NC.md
       - Neighbourhood Committee GROs/Cairnhill NC.md
       - Neighbourhood Committee GROs/Goldhill NC.md
