{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -41,7 +41,7 @@ collections:
       - Neighbourhood Committee GROs/.keep
       - Neighbourhood Committee GROs/Balmoral RN.md
       - Neighbourhood Committee GROs/Cambridge NC.md
-      - Neighbourhood Committee GROs/Cairnhill NC.md
+      - Neighbourhood Committee GROs/Cairnhill RN.md
       - Neighbourhood Committee GROs/Goldhill NC.md
       - Neighbourhood Committee GROs/Newton NC.md
       - Neighbourhood Committee GROs/Tanglin NC.md
