{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-people/collection.yml
+++ b/_our-people/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Mr Alvin Tan.md
       - Author Yousuf Rajid.md
       - Being a Citizens On Patrol Volunteer Mdm Hamida Binte Khalid.md
-      - Dr Tan Eng Liang.md
+      - Late Dr Tan Eng Liang.md
       - Employee of the Year & Dedicated Volunteer Mr Bobby Chan.md
       - Doreen of Goldhill NC.md
       - Ms Marlene Gwee.md
