--- a/_volunteer-with-us/collection.yml
+++ b/_volunteer-with-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-with-us:
     output: true
     order:
+      - Moulmein Cairnhill Integration Network (IN).md
       - Phase 2B (Applying as a Grassroots Leader).md
       - Be Our Volunteer.md
       - MoCa Well Being Circle.md
