{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -36,7 +36,7 @@ collections:
       - Residents’ Committee (RC)/.keep
       - Residents’ Committee (RC)/Farrer Park RC.md
       - Residents’ Committee (RC)/Farrer Road RC.md
-      - Residents’ Committee (RC)/Owen RC.md
+      - Residents’ Committee (RC)/Pek Kio RN.md
       - Residents’ Committee (RC)/Tekka RC.md
       - Neighbourhood Committee GROs/.keep
       - Neighbourhood Committee GROs/Balmoral RN.md
