--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -44,5 +44,5 @@ collections:
       - Neighbourhood Committee GROs/Cairnhill RN.md
       - Neighbourhood Committee GROs/Goldhill NC.md
       - Neighbourhood Committee GROs/Newton RN.md
-      - Neighbourhood Committee GROs/Tanglin NC.md
+      - Neighbourhood Committee GROs/Botanic Gardens RN.md
       - Neighbourhood Committee GROs/The Hills RN.md
