{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -40,7 +40,7 @@ collections:
       - Residents’ Committee (RC)/Tekka RC.md
       - Neighbourhood Committee GROs/.keep
       - Neighbourhood Committee GROs/Balmoral RN.md
-      - Neighbourhood Committee GROs/Cambridge NC.md
+      - Neighbourhood Committee GROs/Cambridge RN.md
       - Neighbourhood Committee GROs/Cairnhill RN.md
       - Neighbourhood Committee GROs/Goldhill NC.md
       - Neighbourhood Committee GROs/Newton RN.md
