--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -38,12 +38,12 @@ collections:
       - Residents’ Committee (RC)/Farrer Road RC.md
       - Residents’ Committee (RC)/Pek Kio RN.md
       - Residents’ Committee (RC)/Tekka RC.md
-      - Neighbourhood Committee GROs/.keep
-      - Neighbourhood Committee GROs/Balmoral RN.md
-      - Neighbourhood Committee GROs/Stevens' RN.md
-      - Neighbourhood Committee GROs/Cambridge RN.md
-      - Neighbourhood Committee GROs/Cairnhill RN.md
-      - Neighbourhood Committee GROs/Goldhill NC.md
-      - Neighbourhood Committee GROs/Newton RN.md
-      - Neighbourhood Committee GROs/Botanic Gardens RN.md
-      - Neighbourhood Committee GROs/The Hills RN.md
+      - Residents' Network (RN)/.keep
+      - Residents' Network (RN)/Balmoral RN.md
+      - Residents' Network (RN)/Stevens' RN.md
+      - Residents' Network (RN)/Cambridge RN.md
+      - Residents' Network (RN)/Cairnhill RN.md
+      - Residents' Network (RN)/Goldhill NC.md
+      - Residents' Network (RN)/Newton RN.md
+      - Residents' Network (RN)/Botanic Gardens RN.md
+      - Residents' Network (RN)/The Hills RN.md
