{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -13,8 +13,8 @@ collections:
         (IN).md
       - Moulmein Cairnhill CCC GROs/Moulmein Cairnhill Active Ageing Committee
         (AAC).md
-      - Moulmein Cairnhill CCC GROs/Moulmein Cairnhill Community Emergency
-        Preparedness (C2E).md
+      - Moulmein Cairnhill CCC GROs/Moulmein Cairnhill Community Emergency and
+        Engagement Committees (C2E).md
       - Cairnhill Community Club (CC)/.keep
       - Cairnhill Community Club (CC)/Cairnhill CC IAEC.md
       - Cairnhill Community Club (CC)/Cairnhill CC MAEC.md
