{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_volunteer-with-us/collection.yml
+++ b/_volunteer-with-us/collection.yml
@@ -7,7 +7,7 @@ collections:
       - MoCa Well Being Circle.md
       - Our Green MoCa.md
       - Our Migrant Guests.md
-      - Moulmein Cairnhill Integration and Naturalisation Champions (INCs).md
+      - Moulmein Cairnhill Integration and Naturalisation Champions.md
       - MoCa Women.md
       - Tutoring and Mentoring.md
       - Moulmein Cairnhill Harmony Circle.md
