{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_heritage-trail/collection.yml
+++ b/_heritage-trail/collection.yml
@@ -2,5 +2,6 @@ collections:
   heritage-trail:
     output: true
     order:
+      - Cambridge Nc.md
       - MoCa Heritage Trail.md
       - Featured Sites.md
