--- a/_heritage-trail/collection.yml
+++ b/_heritage-trail/collection.yml
@@ -2,6 +2,7 @@ collections:
   heritage-trail:
     output: true
     order:
+      - Farrer Park RC.md
       - Cambridge NC.md
       - MoCa Heritage Trail.md
       - Featured Sites.md
