{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_heritage-trail/collection.yml
+++ b/_heritage-trail/collection.yml
@@ -2,6 +2,7 @@ collections:
   heritage-trail:
     output: true
     order:
+      - Tanglin NC.md
       - Newton NC.md
       - Goldhill NC.md
       - Farrer Park RC.md
