--- a/_heritage-trail/collection.yml
+++ b/_heritage-trail/collection.yml
@@ -2,6 +2,7 @@ collections:
   heritage-trail:
     output: true
     order:
+      - The Hills RN.md
       - Tanglin NC.md
       - Newton NC.md
       - Goldhill NC.md
