{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_heritage-trail/collection.yml
+++ b/_heritage-trail/collection.yml
@@ -8,5 +8,5 @@ collections:
       - Farrer Park RC.md
       - Goldhill NC.md
       - Newton NC.md
-      - Tanglin NC.md
+      - Botanic Gardens RN.md
       - The Hills RN.md
