{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_heritage-trail/collection.yml
+++ b/_heritage-trail/collection.yml
@@ -7,6 +7,6 @@ collections:
       - Cambridge NC.md
       - Farrer Park RC.md
       - Goldhill NC.md
-      - Newton NC.md
+      - Newton RN.md
       - Botanic Gardens RN.md
       - The Hills RN.md
