{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_heritage-trail/collection.yml
+++ b/_heritage-trail/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - MoCa Heritage Trail.md
       - Featured Sites.md
-      - Cambridge NC.md
+      - Cambridge RN.md
       - Farrer Park RC.md
       - Goldhill NC.md
       - Newton RN.md
