{"message":"Update file: navigation.yml","userId":"3135","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,5 +14,7 @@ links:
     url: /be-our-volunteer/
   - title: Heritage Trail
     url: /heritage-trail
+  - title: Edusave Awards
+    collection: edusave-awards
   - title: Contact
     url: /contact
