--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ links:
     url: /be-our-volunteer/
   - title: Heritage Trail
     url: /heritage-trail
-  - title: Edusave Awards
-    collection: edusave-awards
   - title: Contact
     url: /contact
+  - title: Edusave Awards
+    url: /pek-kio-cc-session-1
