{"message":"Update file: navigation.yml","userId":"3135","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,17 +4,17 @@ links:
     url: /moulmein-cairnhill/news-and-notices/
   - title: Our Town
     url: /moulmein-cairnhill/our-town/
-  - title: Our Community
+  - title: Community
     url: /moulmein-cairnhill
-  - title: Our People
+  - title: People
     url: /mr-alvin-tan
   - title: Events
     url: /moulmein-cairnhill/recent-events/
   - title: Volunteer
     url: /be-our-volunteer/
-  - title: Heritage Trail
-    url: /heritage-trail
   - title: Contact
     url: /contact
-  - title: Edusave Awards
+  - title: Heritage Trail
+    url: /heritage-trail
+  - title: Edusave
     url: /pek-kio-cc-session-1
