{"message":"Update file: _config.yml","userId":"3135","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Moulmein-Cairnhill
-url: https://moulmeincairnhill.pa.gov.sg
+url: https://moulmein-cairnhill.pa.gov.sg
 favicon: /images/60ef2b999757da7b73ab4e6a_Favicon.png
 colors:
   primary-color: "#da1f34"
