--- a/_edusave-awards/collection.yml
+++ b/_edusave-awards/collection.yml
@@ -2,5 +2,6 @@ collections:
   edusave-awards:
     output: true
     order:
+      - Tanglin CC (Sat) Session 1.md
       - Pek Kio CC Session 1.md
       - Pek Kio CC Session 2.md
