--- a/_edusave-awards/collection.yml
+++ b/_edusave-awards/collection.yml
@@ -2,6 +2,7 @@ collections:
   edusave-awards:
     output: true
     order:
+      - Tanglin CC (Sat) Session 2.md
       - Tanglin CC (Sat) Session 1.md
       - Pek Kio CC Session 1.md
       - Pek Kio CC Session 2.md
