{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_edusave-awards/collection.yml
+++ b/_edusave-awards/collection.yml
@@ -2,6 +2,7 @@ collections:
   edusave-awards:
     output: true
     order:
+      - Tanglin CC (Sun) Session 3.md
       - Tanglin CC (Sun) Session 2.md
       - Tanglin CC (Sun) Session 1.md
       - Tanglin CC (Sat) Session 4.md
