{"message":"Update file: navigation.yml","userId":"3135","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,3 +18,10 @@ links:
     url: /heritage-trail
   - title: Edusave
     url: /pek-kio-cc-session-1
+  - title: Edusave
+    url: /edusave-awards-feb-2025/pek-kio-cc-session-1/
+    sublinks:
+      - title: Feb 2025
+        url: /edusave-awards-feb-2025/pek-kio-cc-session-1/
+      - title: Mar 2025
+        url: /edusave-awards-mar-2025/tanglin-cc-sat-session-1/
