--- a/_edusave-awards-mar-2025/collection.yml
+++ b/_edusave-awards-mar-2025/collection.yml
@@ -2,6 +2,7 @@ collections:
   edusave-awards-mar-2025:
     output: true
     order:
+      - Tanglin CC (Sat) Session 4.md
       - Tanglin CC (Sat) Session 3.md
       - Tanglin CC (Sat) Session 1.md
       - Tanglin CC (Sat) Session 2.md
