{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -37,6 +37,7 @@ collections:
       - Residents’ Committee (RC)/Farrer Park RC.md
       - Residents’ Committee (RC)/Farrer Road RC.md
       - Residents’ Committee (RC)/Pek Kio RN.md
+      - Residents' Network (RN)/Tekka RC.md
       - Residents' Network (RN)/.keep
       - Residents' Network (RN)/Balmoral RN.md
       - Residents' Network (RN)/Stevens' RN.md
