{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -35,6 +35,7 @@ collections:
       - Tanglin Community Club (CC)/Tanglin CC.md
       - Residents’ Committee (RC)/.keep
       - Residents’ Committee (RC)/Farrer Park RC.md
+      - Residents' Network (RN)/Farrer Road RC.md
       - Residents' Network (RN)/Pek Kio RN.md
       - Residents' Network (RN)/Tekka RC.md
       - Residents' Network (RN)/.keep
