{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -34,6 +34,7 @@ collections:
       - Tanglin Community Club (CC)/Tanglin CC IAEC.md
       - Tanglin Community Club (CC)/Tanglin CC.md
       - Residents’ Committee (RC)/.keep
+      - Residents' Network (RN)/Farrer Park RC.md
       - Residents' Network (RN)/Farrer Road RC.md
       - Residents' Network (RN)/Pek Kio RN.md
       - Residents' Network (RN)/Tekka RC.md
