--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -34,16 +34,16 @@ collections:
       - Tanglin Community Club (CC)/Tanglin CC IAEC.md
       - Tanglin Community Club (CC)/Tanglin CC.md
       - Residents’ Committee (RC)/.keep
-      - Residents' Network (RN)/Farrer Park RC.md
-      - Residents' Network (RN)/Farrer Road RC.md
-      - Residents' Network (RN)/Pek Kio RN.md
-      - Residents' Network (RN)/Tekka RC.md
-      - Residents' Network (RN)/.keep
-      - Residents' Network (RN)/Balmoral RN.md
-      - Residents' Network (RN)/Stevens' RN.md
-      - Residents' Network (RN)/Cambridge RN.md
-      - Residents' Network (RN)/Cairnhill RN.md
-      - Residents' Network (RN)/Goldhill NC.md
-      - Residents' Network (RN)/Newton RN.md
-      - Residents' Network (RN)/Botanic Gardens RN.md
-      - Residents' Network (RN)/The Hills RN.md
+      - Residents’ Committee & Network/Farrer Park RC.md
+      - Residents’ Committee & Network/Farrer Road RC.md
+      - Residents’ Committee & Network/Pek Kio RN.md
+      - Residents’ Committee & Network/Tekka RC.md
+      - Residents’ Committee & Network/.keep
+      - Residents’ Committee & Network/Balmoral RN.md
+      - Residents’ Committee & Network/Stevens' RN.md
+      - Residents’ Committee & Network/Cambridge RN.md
+      - Residents’ Committee & Network/Cairnhill RN.md
+      - Residents’ Committee & Network/Goldhill NC.md
+      - Residents’ Committee & Network/Newton RN.md
+      - Residents’ Committee & Network/Botanic Gardens RN.md
+      - Residents’ Committee & Network/The Hills RN.md
