{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -15,12 +15,12 @@ collections:
         (AAC).md
       - Moulmein Cairnhill CCC GROs/Moulmein Cairnhill Community Emergency and
         Engagement Committees (C2E).md
-      - Cairnhill Community Club (CC)/.keep
-      - Cairnhill Community Club (CC)/Cairnhill CC IAEC.md
-      - Cairnhill Community Club (CC)/Cairnhill CC MAEC.md
-      - Cairnhill Community Club (CC)/Cairnhill CC WEC.md
-      - Cairnhill Community Club (CC)/Cairnhill CC SCEC.md
-      - Cairnhill Community Club (CC)/Cairnhill CC CCMC.md
+      - Cairnhill Community Club/.keep
+      - Cairnhill Community Club/Cairnhill CC IAEC.md
+      - Cairnhill Community Club/Cairnhill CC MAEC.md
+      - Cairnhill Community Club/Cairnhill CC WEC.md
+      - Cairnhill Community Club/Cairnhill CC SCEC.md
+      - Cairnhill Community Club/Cairnhill CC CCMC.md
       - Pek Kio Community Centre (CC)/.keep
       - Pek Kio Community Centre (CC)/Pek Kio CC CCMC.md
       - Pek Kio Community Centre (CC)/Pek Kio CC SCEC.md
