{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -21,12 +21,12 @@ collections:
       - Cairnhill Community Club/Cairnhill CC WEC.md
       - Cairnhill Community Club/Cairnhill CC SCEC.md
       - Cairnhill Community Club/Cairnhill CC CCMC.md
-      - Pek Kio Community Centre (CC)/.keep
-      - Pek Kio Community Centre (CC)/Pek Kio CC CCMC.md
-      - Pek Kio Community Centre (CC)/Pek Kio CC SCEC.md
-      - Pek Kio Community Centre (CC)/Pek Kio CC WEC.md
-      - Pek Kio Community Centre (CC)/Pek Kio CC MAEC.md
-      - Pek Kio Community Centre (CC)/Pek Kio CC IAEC.md
+      - Pek Kio Community Centre/.keep
+      - Pek Kio Community Centre/Pek Kio CC CCMC.md
+      - Pek Kio Community Centre/Pek Kio CC SCEC.md
+      - Pek Kio Community Centre/Pek Kio CC WEC.md
+      - Pek Kio Community Centre/Pek Kio CC MAEC.md
+      - Pek Kio Community Centre/Pek Kio CC IAEC.md
       - Tanglin Community Club (CC)/.keep
       - Tanglin Community Club (CC)/Tanglin CC CCMC.md
       - Tanglin Community Club (CC)/Tanglin CC SCEC.md
