{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -27,12 +27,12 @@ collections:
       - Pek Kio Community Centre/Pek Kio CC WEC.md
       - Pek Kio Community Centre/Pek Kio CC MAEC.md
       - Pek Kio Community Centre/Pek Kio CC IAEC.md
-      - Tanglin Community Club (CC)/.keep
-      - Tanglin Community Club (CC)/Tanglin CC CCMC.md
-      - Tanglin Community Club (CC)/Tanglin CC SCEC.md
-      - Tanglin Community Club (CC)/Tanglin CC WEC.md
-      - Tanglin Community Club (CC)/Tanglin CC IAEC.md
-      - Tanglin Community Club (CC)/Tanglin CC.md
+      - Tanglin Community Club/.keep
+      - Tanglin Community Club/Tanglin CC CCMC.md
+      - Tanglin Community Club/Tanglin CC SCEC.md
+      - Tanglin Community Club/Tanglin CC WEC.md
+      - Tanglin Community Club/Tanglin CC IAEC.md
+      - Tanglin Community Club/Tanglin CC.md
       - Residents’ Committee (RC)/.keep
       - Residents’ Committee & Network/Farrer Park RC.md
       - Residents’ Committee & Network/Farrer Road RC.md
