--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -35,7 +35,7 @@ collections:
       - Tanglin Community Club/Tanglin CC.md
       - Residents’ Committee & Network/Farrer Park RC.md
       - Residents’ Committee & Network/Pek Kio RN.md
-      - Residents’ Committee & Network/Tekka RC.md
+      - Residents’ Committee & Network/Tekka RN.md
       - Residents’ Committee & Network/.keep
       - Residents’ Committee & Network/Balmoral RN.md
       - Residents’ Committee & Network/Stevens' RN.md
