{"message":"Update file: collection.yml","userId":"3135","fileName":"collection.yml"}

--- a/_our-community/collection.yml
+++ b/_our-community/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Moulmein–Cairnhill.md
+      - Moulmein Cairnhill CCC GROs/Moulmein Cairnhill Silver.md
       - Moulmein Cairnhill CCC GROs/.keep
       - Moulmein Cairnhill CCC GROs/Moulmein Cairnhill Youth Network.md
       - Moulmein Cairnhill CCC GROs/Moulmein Cairnhill Community Sports Network
