{"message":"Update file: navigation.yml","userId":"3135","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,9 +17,9 @@ links:
   - title: Heritage Trail
     url: /heritage-trail
   - title: Edusave
-    url: /edusave-awards-feb-2025/pek-kio-cc-session-1/
+    url: /
     sublinks:
-      - title: Feb 2025
+      - title: Edusave Feb '25
         url: /edusave-awards-feb-2025/pek-kio-cc-session-1/
-      - title: Mar 2025
+      - title: Edusave Mar '25
         url: /edusave-awards-mar-2025/tanglin-cc-sat-session-1/
