{"message":"Update file: navigation.yml","userId":"3135","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ links:
   - title: Edusave
     url: /
     sublinks:
-      - title: Edusave Feb '25
+      - title: Feb '25
         url: /edusave-awards-feb-2025/pek-kio-cc-session-1/
-      - title: Edusave Mar '25
+      - title: Mar '25
         url: /edusave-awards-mar-2025/tanglin-cc-sat-session-1/
