{"message":"Update file: navigation.yml","userId":"3135","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,3 +23,8 @@ links:
         url: /edusave-awards-feb-2025/pek-kio-cc-session-1/
       - title: Mar '25
         url: /edusave-awards-mar-2025/tanglin-cc-sat-session-1/
+  - title: National Day Dinner '25
+    url: /permalink
+    sublinks:
+      - title: Awards
+        url: /permalink
