{"message":"Update file: navigation.yml","userId":"3135","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ links:
       - title: Mar '25
         url: /edusave-awards-mar-2025/tanglin-cc-sat-session-1/
   - title: National Day Dinner '25
-    url: /permalink
+    url: /ndd25/award-recipients/
     sublinks:
       - title: Awards
-        url: /permalink
+        url: /ndd25/award-recipients/
