{"message":"Update file: navigation.yml","userId":"3135","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,8 @@ links:
     sublinks:
       - title: Awards
         url: /ndd25/award-recipients/
+      - title: Tables
+        url: /ndd25/tables/
   - title: Heritage Trail
     url: /heritage-trail
   - title: Edusave
