{"message":"Update file: footer.yml","userId":"3135","fileName":"footer.yml"}

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,4 +2,4 @@ contact_us: /contact
 show_reach: false
 social_media:
   facebook: https://facebook.com/weare.moca
-  instagram: https://instagram.com/weare.moca
+  instagram: https://www.instagram.com/our.moca
