--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/image_4.jpg
+logo: /images/PA_Logo_Sized_Relative.png
 links:
   - title: News
     url: /moulmein-cairnhill/news-and-notices/
