--- a/_edusave-awards-feb-2026/collection.yml
+++ b/_edusave-awards-feb-2026/collection.yml
@@ -2,6 +2,7 @@ collections:
   edusave-awards-feb-2026:
     output: true
     order:
+      - Cairnhill CC Session 4 (Feb '26).md
       - Cairnhill CC Session 3 (Feb '26).md
       - Cairnhill CC Session 2 (Feb '26).md
       - Cairnhill CC Session 1 (Feb '26).md
