--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,3 +23,7 @@ links:
         url: /edusave-awards-feb-2025/pek-kio-cc-session-1/
       - title: Mar '25
         url: /edusave-awards-mar-2025/tanglin-cc-sat-session-1/
+      - title: Jan '26
+        url: /edusave-awards-jan-2026/pek-kio-cc-session-1-jan-26/
+      - title: Feb '26
+        url: /edusave-awards-feb-2026/cairnhill-cc-session-1-feb-26/
